# PourToutEtAJamais

./: .gitignore  Licence.txt  README.md
INF4710 - Introduction Multimedia/TP3/inf4710_a2016_tp3_cpp_v1.1/: CMakeCache.txt  CMakeLists.txt
INF4710 - Introduction Multimedia/TP3/inf4710_a2016_tp3_cpp_v1.1/data/: TP3_video.avi
INF4710 - Introduction Multimedia/TP3/inf4710_a2016_tp3_cpp_v1.1/include/: utils.hpp
INF4710 - Introduction Multimedia/TP3/inf4710_a2016_tp3_cpp_v1.1/src/: convo.cpp  histo.cpp  main.cpp
INF8601-Parallele/: Classeur-parallele.xlsx
INF8601-Parallele/inf8601-lab1/: Makefile  Makefile.am  Makefile.in  README  autogen.sh  callgrind.out.11002  callgrind.out.11147  callgrind.out.12128  callgrind.out.28861  config.h  config.h.in  config.status  configure  configure.ac  dragon.ppm  fixperms.sh  libtool  out.pgm  performance.sh  preprocess.py  trace-dragon
INF8601-Parallele/inf8601-lab1/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
INF8601-Parallele/inf8601-lab1/results/: dragon_pthread_28.pgm  dragon_serial_28.pgm  dragon_tbb_28.pgm  time_dragonizer.data  time_dragonizer_draw_pthread_28.data  time_dragonizer_draw_serial_28.data  time_dragonizer_draw_tbb_28.data  time_dragonizer_limits_pthread_28.data  time_dragonizer_limits_serial_28.data  time_dragonizer_limits_tbb_28.data
INF8601-Parallele/inf8601-lab1/src/: .dragon_pthread.c.kate-swp  .dragon_tbb.cpp.kate-swp  Makefile  Makefile.am  Makefile.in  TidMap.cpp  TidMap.h  color.c  color.h  dragon.c  dragon.h  dragon_pthread.c  dragon_pthread.h  dragon_tbb.cpp  dragon_tbb.h  dragonizer  dragonizer.c  example.c  utils.c  utils.h
INF8601-Parallele/inf8601-lab1/src/.deps/: TidMap.Po  dragon_tbb.Po  dragonizer-dragon_pthread.Po  dragonizer-dragonizer.Po  libdragon_a-color.Po  libdragon_a-dragon.Po  libdragon_a-utils.Po
INF8601-Parallele/inf8601-lab1/tests/: Makefile  Makefile.am  Makefile.in  dragon_check_failed_serial.ppm  dragon_check_failed_tbb.ppm  test-all.sh
INF8601-Parallele/inf8601-lab2/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  fixperms.sh  libtool  notes.txt  perf-encode.sh  preprocess.py  stats.csv
INF8601-Parallele/inf8601-lab2/attic/: fluid.c  heat.c  heat.h  heat2d.c  heat_cuda.cu  heat_cuda.h  layer.c  layer.h  solver.c  solver.h  stripe.c  stripe.h  test.c
INF8601-Parallele/inf8601-lab2/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
INF8601-Parallele/inf8601-lab2/encode/: Makefile  Makefile.am  Makefile.in  algo.c  algo.h  chunk.c  chunk.h  encode  encode.c
INF8601-Parallele/inf8601-lab2/encode/.deps/: encode-algo.Po  encode-chunk.Po  encode-encode.Po
INF8601-Parallele/inf8601-lab2/results/: .~lock.stats-1-HT0.csv#  perf-17131.out  perf-17131.out.data  perf-22690.out  perf-22690.out.data  stats-1-HT0.csv  stats-2-HT0.csv  stats-2-HT1.csv
INF8601-Parallele/inf8601-lab2/src/: Makefile  Makefile.am  Makefile.in  color.c  color.h  memory.c  memory.h  sinoscope  sinoscope-11380.out  sinoscope-18279.out  sinoscope-18317.out  sinoscope-19328.out  sinoscope-23953.out  sinoscope-31977.out  sinoscope-9609.out  sinoscope.c  sinoscope.h  sinoscope_kernel.cl  sinoscope_opencl.cpp  sinoscope_opencl.h  sinoscope_openmp.c  sinoscope_openmp.h  sinoscope_serial.c  sinoscope_serial.h  util.h
INF8601-Parallele/inf8601-lab2/src/.deps/: libbcl_a-sinoscope_opencl.Po  memory.Po  sinoscope-color.Po  sinoscope-sinoscope.Po  sinoscope-sinoscope_openmp.Po  sinoscope-sinoscope_serial.Po
INF8601-Parallele/inf8601-lab2/tests/: Makefile  Makefile.in  test-all.sh
INF8601-Parallele/inf8601-lab3-2.1.2/: README  config.h.in  fixperms.sh
INF8601-Parallele/inf8601-lab3-2.1.4/: Classeur-parallele.xlsx  Makefile  RapportTP3.odt  aclocal.m4  compare_images.py  config.status  libtool  test4.ppl
INF8601-Parallele/inf8601-lab3-2.1.4/src/: Makefile  Makefile.am  cart.h  exchng.c  heat.c  heatsim.c  image.c  part.c
INF8601-Parallele/inf8601-lab3-2.1.4/src/.deps/: exchng.Po  libinf_a-cart.Po  libinf_a-grid.Po  libinf_a-heat.Po  libinf_a-memory.Po
INF8601-Parallele/inf8601-lab3-real/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool  preprocess.py
INF8601-Parallele/inf8601-lab3-real/cluster/: all.sh  cart-16.sh  heatsim-12.sh  heatsim-2.sh  heatsim-4.sh  heatsim-8.sh  lib.sh
INF8601-Parallele/inf8601-lab3-real/examples/: Makefile  Makefile.am  mpi5.c
INF8601-Parallele/inf8601-lab3-real/examples/.deps/: mpi2.Po  mpi7.Po
INF8601-Parallele/inf8601-lab3-real/src/: Makefile  cart.c  grid.c  heat.h  heatsim.c  memory.c  part.h
INF8601-Parallele/inf8601-lab3-real/src/.deps/: heatsim.Po  libinf_a-color.Po  libinf_a-image.Po  libinf_a-part.Po
INF8601-Parallele/inf8601-lab3-real/tests/: Makefile  Makefile.am  Makefile.in  unittest.h
Inf4410-Infonuagique/TP2/: .classpath  .nfs000000000b5e06e400000445  .nfs000000000b5e093c00000444  .nfs000000000b5e1213000000cb  .project  1621348-1626377-TP2-INF4410.tar  ReadMe  build.xml  client  worker
Log2010 - Algorithmes/: CircularTable.java  DoubleStackQueue.java  PostfixSolver.java
Log2010 - Algorithmes/labo1_inf2010/: build.xml
Physique Multimedia/Devoir 1/: Cylinder.m  Devoir1A2015_1689761_1621348_1626377_1679095.docx  Main.m  PHS4700.docx  Shape.m  Sphere.m  moveMoment.m
Physique Multimedia/Devoir 2/: Devoir2.m  Exfg.m  FixDTZoneCrit.m  Option2.m  Option3.m  PHS4700_devoir2_1689761_1621348_1626377_1679095.docx  Rapport 2.docx  SEDRK4.m  SOLRK4.m  SOLRK4C.m  checkEnd.m  test.m
Physique Multimedia/Devoir 3/: Devoir3.m  Main.m  QARotation.m  QConjugue.m  QProduit.m  SEDRK4.m  chuteAvecFrottementBalle.m  chuteAvecFrottementBoite.m
Physique Multimedia/Devoir 4/: Backup.7z  CollisionRayon.m  Devoir4.m  DistanceDroitePlan.m  Main.m  Mur.m  Rapport 4.docx  Rayon.m
TP-Traitement-Image/TP-1/: TFD.m  TP.m
TP-Traitement-Image/TP-2/: Binariser.m  CompterMonnaie.m  Egalisation_Histogramme.m  Filtre_Gaussien.m  Filtre_Laplacien.m  Rehaussement_Contour.m  TFDShift.m  TP.asv  TP.m
TP-Traitement-Image/TP-3/: Filtre_Canny.m  (+7 more)
(+160 files in other folders)
