bin_PROGRAMS = mpi1 mpi2 mpi3 mpi4 mpi5 mpi6 mpi7
AM_CFLAGS = -I $(top_srcdir)/src
mpi1_SOURCES = mpi1.c
mpi2_SOURCES = mpi2.c
mpi3_SOURCES = mpi3.c
mpi4_SOURCES = mpi4.c
mpi4_LDADD = $(top_srcdir)/src/libinf.a

mpi5_SOURCES = mpi5.c
mpi6_SOURCES = mpi6.c
mpi6_LDADD = $(top_srcdir)/src/libinf.a
mpi7_SOURCES = mpi7.c

